# fft-parallel

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODING_STANDARD  README.md  TODO.md  clib.json  fft.spec.in  install.sh  package.json
benchmark/: CMakeLists.txt  main.c  util.c
benchmark/include/: benchmark.h
cmake/: CPackConfig.cmake
doc/tex/: fft-parallel.aux  fft-parallel.blg  fft-parallel.fdb_latexmk  fft-parallel.fls  fft-parallel.tex  thyroid-disease.tex
fft/: CMakeLists.txt
fft/include/scic/: fft.h
fft/src/: CMakeLists.txt
fft/src/fft/: CMakeLists.txt
fft/src/openmp/: CMakeLists.txt  fft.c
fft/src/pthread-fft/: CMakeLists.txt  fft.c
fft/src/serial/: CMakeLists.txt  dft.c  fft.c
fft/src/util/: CMakeLists.txt  complex.c
test/: CMakeLists.txt  dft.c  fft.c
test/include/: test.h
test/src/openmp/: fft.c
test/src/pthread/: fft.c
test/src/serial/: dft.c  fft.c
